--- a/UrlStd/App.config
+++ b/UrlStd/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -23,6 +23,5 @@
   <appSettings>
     <add key="htmldir" value="C:\Ligonier\webcache"/>
     <add key="otherdir" value="C:\Ligonier\webcache\assets"/>
-    <add key="batchsize" value="10"/>
   </appSettings>
 </configuration>
