--- a/Data6/App.config
+++ b/Data6/App.config
@@ -15,6 +15,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=WebTEMP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection"
+         connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=WebTEMP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;connect timeout=60;encrypt=False;trustservercertificate=True;persist security info=False;pooling=True"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
