--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Interfaces\IDownloader.cs" />
     <Compile Include="Interfaces\IHttpParser.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Models\ContentTypeToExtn.cs" />
