--- a/HapParser/HapLib.csproj
+++ b/HapParser/HapLib.csproj
@@ -60,5 +60,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Samples\Page2.html" />
+    <Content Include="Samples\Page1.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
