--- a/KissFW/App.config
+++ b/KissFW/App.config
@@ -24,5 +24,6 @@
     <add key="htmldir" value="C:\Ligonier\webcache"/>
     <add key="otherdir" value="C:\Ligonier\webcache\assets"/>
     <add key="batchsize" value="30"/>
+    <add key="maxlinks" value="2500"/>
   </appSettings>
 </configuration>
