--- a/KissFW/App.config
+++ b/KissFW/App.config
@@ -25,5 +25,6 @@
     <add key="otherdir" value="C:\Ligonier\webcache\assets"/>
     <add key="batchsize" value="30"/>
     <add key="maxlinks" value="2500"/>
+    <add key="maxfilesize" value="10000000"/>
   </appSettings>
 </configuration>
