--- a/KissFW/App.config
+++ b/KissFW/App.config
@@ -18,7 +18,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=WebTEST;integrated security=True;persist security info=False;pooling=True;multipleactiveresultsets=True;connect timeout=60;encrypt=False;trustservercertificate=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="OLDConnection" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=WebTEST;integrated security=True;persist security info=False;pooling=True;multipleactiveresultsets=True;connect timeout=60;encrypt=False;trustservercertificate=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="data source=DELLTOSH;initial catalog=WebPROD;integrated security=True;persist security info=False;pooling=True;multipleactiveresultsets=True;connect timeout=60;encrypt=False;trustservercertificate=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="htmldir" value="C:\Ligonier\webcache"/>
