add DataHosts and full EF

--- a/DataHosts/DataHosts.csproj
+++ b/DataHosts/DataHosts.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9FA61B49-AF69-4714-B6ED-BA075ACC523C}</ProjectGuid>
+    <ProjectGuid>{A1BBE330-E6D2-4487-9187-C6A6F6FD03A1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HapParser</RootNamespace>
-    <AssemblyName>HapParser</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <RootNamespace>DataHosts</RootNamespace>
+    <AssemblyName>DataHosts</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,13 +31,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.11.7.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.11.7\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,21 +56,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HapParser.cs" />
+    <Compile Include="..\Infrastructure\Models\MimeCollection.cs">
+      <Link>Infrastructure\Models\MimeCollection.cs</Link>
+    </Compile>
+    <Compile Include="..\WebStore\MyConfiguration.cs">
+      <Link>MyConfiguration.cs</Link>
+    </Compile>
+    <Compile Include="Infrastructure\Models\Agent.cs" />
+    <Compile Include="Infrastructure\Models\Boost.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Infrastructure\Utils.cs" />
+    <Compile Include="Migrations\201906051443101_InitialDDL.cs" />
+    <Compile Include="Migrations\201906051443101_InitialDDL.Designer.cs">
+      <DependentUpon>201906051443101_InitialDDL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Infrastructure\Models\ContentTypeToExtn.cs" />
+    <Compile Include="Infrastructure\Models\Downloading.cs" />
+    <Compile Include="Infrastructure\Models\Host.cs" />
+    <Compile Include="WebModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Infrastructure\Models\WebPage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{d39a2223-3081-4aa3-a91b-4faff8dbe6f9}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Samples\Page 3.html" />
-    <Content Include="Samples\Page2.html" />
+    <EmbeddedResource Include="Migrations\201906051443101_InitialDDL.resx">
+      <DependentUpon>201906051443101_InitialDDL.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
